5分钟执行一次

--- a/.github/workflows/getTvResource.yml
+++ b/.github/workflows/getTvResource.yml
@@ -1,6 +1,8 @@
 name: GET RESOURCE
 run-name: ${{ github.actor }} is to get resouece
-on: [push]
+on:
+    schedule:
+      - cron: */5 * * * *
 env:
      TZ: Asia/Shanghai
 jobs:
